# Academix-AI

AI-backend/: main.py  pyproject.toml
AI-backend/config/: db.py
AI-backend/models/: quiz.py
AI-backend/schemas/: quizSchema.py
AI-backend/services/: quizService.py
server/: package-lock.json  package.json  server.js
server/src/: app.js
server/src/controllers/: authController.js
server/src/middleware/: auth.js
server/src/models/: coursesModel.js  instituteModel.js  studentModel.js  teacherModel.js  userModel.js
server/src/routes/: authRoutes.js
server/src/services/: emailServices.js
