[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.139.0",
    "psycopg[binary]==3.3.4",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "sqlalchemy==2.0.51",
    "uvicorn==0.51.0",
]
