[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.139.0",
    "google-genai>=2.11.0",
    "google-generativeai>=0.8.6",
    "langchain-community>=0.4.2",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "pypdf>=6.14.2",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "uuid>=1.30",
    "uvicorn==0.51.0",
]
